--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -50,7 +50,7 @@
         <br>
         <img src ="../images/rocket_pres.JPG" alt="pres" style="display: block; margin: 0 auto; width:50%; height:auto;">
         <br>
-
+        <br>
         <!-- SYSTEM ARCHITECTURE TABLE -->
         <h3 style="color:#ffffff;">| System Architecture</h3>
         <div style="overflow-x:auto;">
@@ -60,15 +60,16 @@
                     <th style="border-bottom:1px solid #888;">Sub‑system</th>
                     <th style="border-bottom:1px solid #888;">Material / Method</th>
                     <th style="border-bottom:1px solid #888;">Why</th>
-                    <th style="border-bottom:1px solid #888;">Status&nbsp;(May 2025)</th>
+                    <th style="border-bottom:1px solid #888;">Source</th>
                 </tr>
             </thead>
             <tbody>
-                <tr><td>Airframe (4″ Ø)</td><td>G12 filament‑wound fiberglass tube</td><td>Radio‑transparent baseline</td><td>Received</td></tr>
-                <tr><td>Nose cone</td><td>3:1 ogive fiberglass + CNC Al tip</td><td>Strength / weight balance</td><td>CDR closed</td></tr>
-                <tr><td>Fins &amp; bulkheads</td><td>Water‑jet‑cut G10 laminates</td><td>High modulus, low CAM‑time</td><td>Ready to machine</td></tr>
-                <tr><td>Centering rings</td><td>PET‑G 3‑D printed (60 % infill)</td><td>Rapid iteration</td><td>Printed / QA</td></tr>
-                <tr><td>Bond‑line</td><td>West System 105/206 epoxy</td><td>Aerospace pedigree</td><td>In stock</td></tr>
+                <tr><td>Airframe (4″ Ø)</td><td>G12 filament‑wound fiberglass tube</td><td>Radio‑transparent baseline</td><td>Wildman Rocketry</td></tr>
+                <tr><td>Nose cone</td><td>3:1 ogive fiberglass + CNC Al-tip</td><td>Optimized σ/weight & k/weight</td><td>Madcow Rocketry</td></tr>
+                <tr><td>Bulkheads</td><td>G10 laminate</td><td>High modulus</td><td>CNC Water-jet machining</td></tr>
+                <tr><td>Fins</td><td>Birch Plywood</td><td>Easy Manufacturing</td><td>CNC Laser Cutting</td></tr>
+                <tr><td>Centering rings</td><td>PET‑G 3‑D printed (100% infill)</td><td>Rapid iteration</td><td>Printed / QA</td></tr>
+                <tr><td>Bonding</td><td>West System 105/206 epoxy</td><td>Aerospace pedigree</td><td>In stock</td></tr>
             </tbody>
         </table>
         </div>
