--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -73,10 +73,22 @@
             </tbody>
         </table>
         </div>
-
         <br>      
         <img src="../images/ork_rocket.png" alt="ORK" style="display: block; margin: 0 auto;">
         <br>
+
+        <!-- analysis -->
+        <h3 style="color:#ffffff;">| Analysis &amp; Verification</h3>
+        <ul style="color:#ffffff;">
+            <li><strong>Flight modelling</strong> – OpenRocket &amp; RASAero II predict apogee 10,120 ft AGL @ Mach 0.98
+                with 1.5 cal stability margin.</li>
+            <li><strong>FEA</strong> – ANSYS Static Structural on orthotropic lay‑ups shows ≥ 2.5 × limit‑load safety factor.</li>
+            <li><strong>Coupon tests</strong> – 8‑ply G12/Epoxy tensile &amp; shear coupons validate lamina inputs (±8 %).</li>
+            <li><strong>Fin‑can rig</strong> – Custom screw‑jack fixture: 200 lbf compression / 150 lbf bending, 0.8 mm tip deflection.</li>
+        </ul>
+
+        <!-- insert FEA picture here... -->
+
 
         <p style="color: #ffffff;"> Using flight simulation software such as OpenRocket, RockSim, and RASAero, we conduct aerodynamic modeling, trajectory prediction, and stability analysis to refine our design. 
              Our team utilizes Solidworks to design the rocket's airframe, fins, bulkheads, and centering rings to ensure proper integration with propulsion,  avionics, and recovery systems. 
