--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -41,14 +41,14 @@
 
         <!-- ROLE & SCOPE -->
         <h3 style="color:#ffffff;">| My Role &amp; Scope</h3>
-        <ul style="color:#ffffff; font-size:1.1rem;">
+        <ul style="color:#ffffff; font-size:1.3rem;">
             <li><strong>Led a 12‑person sub‑team</strong> through requirements, CAD, FEA, and manufacturing.</li>
             <li>Developed an internal <em>composite design toolbox</em> (Python) that cut laminate sizing time by&nbsp;60 %.</li>
             <li>Mentored team in SolidWorks, ANSYS Mechanical, Classical Lamination Theory, and Tsai‑Wu failure envelopes.</li>
         </ul>
 
         <br>
-        <img src ="../images/rocket_pres.JPG" alt="pres" style="display: block; margin: 0 auto; width:50%; height:auto;">
+        <img src ="../images/rocket_pres.JPG" alt="pres" style="display: block; margin: 0 auto; width:75%; height:auto;">
         <br>
         <br>
         <!-- SYSTEM ARCHITECTURE TABLE -->
@@ -64,12 +64,12 @@
                 </tr>
             </thead>
             <tbody>
-                <tr><td>Airframe (4″ Ø)</td><td>G12 filament‑wound fiberglass tube</td><td>Radio‑transparent baseline</td><td>Wildman Rocketry</td></tr>
+                <tr><td>Airframe (4″ Ø)</td><td>G12 filament‑wound fiberglass tube</td><td>Radio‑transparency</td><td>Wildman Rocketry</td></tr>
                 <tr><td>Nose cone</td><td>3:1 ogive fiberglass + CNC Al-tip</td><td>Optimized σ/weight & k/weight</td><td>Madcow Rocketry</td></tr>
                 <tr><td>Bulkheads</td><td>G10 laminate</td><td>High modulus</td><td>CNC Water-jet machining</td></tr>
                 <tr><td>Fins</td><td>Birch Plywood</td><td>Easy Manufacturing</td><td>CNC Laser Cutting</td></tr>
-                <tr><td>Centering rings</td><td>PET‑G 3‑D printed (100% infill)</td><td>Rapid iteration</td><td>Printed / QA</td></tr>
-                <tr><td>Bonding</td><td>West System 105/206 epoxy</td><td>Aerospace pedigree</td><td>In stock</td></tr>
+                <tr><td>Centering rings</td><td>PET‑G 3‑D printed (100% infill)</td><td>Rapid iteration</td><td>3D Printed</td></tr>
+                <tr><td>Bonding</td><td>West System 105/206 epoxy</td><td>Aerospace pedigree</td><td>West Systems</td></tr>
             </tbody>
         </table>
         </div>
