--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -54,7 +54,7 @@
         <!-- SYSTEM ARCHITECTURE TABLE -->
         <h3 style="color:#ffffff;">| System Architecture</h3>
         <div style="overflow-x:auto;">
-        <table style="width:100%;border-collapse:collapse;color:#ffffff;text-align:left; font-size:1.1rem;">
+        <table style="width:100%;border-collapse:collapse;color:#ffffff;text-align:left; font-size:1.3rem;">
             <thead>
                 <tr>
                     <th style="border-bottom:1px solid #888;">Sub‑system</th>
@@ -93,17 +93,11 @@
         <!-- insert physical testing pictures/results here-->
 
 
-        <img src="../images/rocket_cad.png" alt="Rocket CAD model" style="display:block;margin:2rem auto;max-width:640px;width:90%;">
+        <img src="../images/rocket_cad.png" alt="Rocket CAD model" style="display: block; margin: 0 auto;">
         <br>
-        <h3 style="color:#ffffff;">|Design & Analysis Pipeline</h3>
-        <ol style="color:#ffffff;">
-            <li>CAD release →  DXF / STEP export via SolidWorks PDM.</li>
-            <li>Custom <em>ply‑book generator</em> (Python) outputs cut files &amp; cure schedules.</li>
-            <li>Wet lay‑up + vacuum bag for prototypes; migrating to prepreg out‑of‑autoclave cure in next cycle.</li>
-            <li>Bond‑line QA with dye penetrant and digital calipers (≤ 0.15 mm gap spec).</li>
-        </ol>
+        <h3 style="color:#ffffff;">| Design & Analysis Pipeline</h3>
         <br>
-        <img src="../images/struct_workflow.png" alt="Structural workflow diagram" style="display:block;margin:2rem auto;max-width:640px;width:90%;">
+        <img src="../images/struct_workflow.png" alt="Structural workflow diagram" style="display: block; margin: 0 auto;">
         <br>
         <br>
         <h3 style="color:#ffffff;">| Integration &amp; Testing Milestones</h3>
@@ -133,123 +127,3 @@
     </section>
 </body>
 </html>
-
-<!--  
-####################################################################################################
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IGNITORS Projects | Alvaro Guerra</title>
-    <link rel="stylesheet" href="../styles.css">
-</head>
-<body>
-
-    <header>
-        <a href="../index.html" class="logo-link">
-            <div class="logo-name">
-                <img src="../images/logo.png" alt="Logo" class="logo">
-                <h2>Engineering Portfolio</h2>
-            </div>
-        </a>
-        <nav>
-            <a href="../index.html">Home</a> |
-            <a href="about.html">About</a> |
-            <a href="../files/Resume.pdf">Resume</a> |
-            <a href="../index.html">Projects</a>
-        </nav>
-    </header>
-
-    <section>
-        <div class="centered-content">
-
-            <h1 style="color:#ffffff;text-align:center;">Rocketry</h1>
-            <h2 style="color:#ffffff;text-align:center;">IGNITORS | Structures Lead (2024‑2025)</h2>
-            <h3 style="color:#ffffff;text-align:center;">
-                Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets – Texas A&amp;M University
-            </h3>
-
-            <p style="color:#ffffff;">
-                As founding <strong>Structures Lead</strong>, I own the end‑to‑end structural development of a
-                <strong>10 k ft Commercial‑Off‑The‑Shelf hybrid rocket</strong> headed to the International Rocket
-                Engineering Competition (<abbr title="International Rocket Engineering Competition">IREC</abbr>) in June 2025.
-                Since forming the team in November 2024 we have delivered a flight‑ready prototype, secured sponsorships,
-                and sourced manufacturing partners &nbsp;— all on track for our first launch campaign.
-            </p>
-
-            <img src="../images/ork_rocket.png" alt="OpenRocket Simulation" style="display:block;margin:2rem auto;max-width:640px;width:90%;">
-
-            <h3 style="color:#ffffff;">1&nbsp;| My Role &amp; Scope</h3>
-            <ul style="color:#ffffff;">
-                <li><strong>Lead a 12‑person sub‑team</strong> through requirements, CAD, FEA, manufacturing, and QA.</li>
-                <li>Developed an internal <em>composite design toolbox</em> (Python) that cut laminate sizing time by&nbsp;60 %.</li>
-                <li>Mentor teammates in SolidWorks, ANSYS Mechanical, Classical Lamination Theory, and Tsai‑Wu failure envelopes.</li>
-            </ul>
-
-            <h3 style="color:#ffffff;">2&nbsp;| System Architecture</h3>
-            <div style="overflow-x:auto;">
-            <table style="width:100%;border-collapse:collapse;color:#ffffff;text-align:left;">
-                <thead>
-                    <tr>
-                        <th style="border-bottom:1px solid #888;">Sub‑system</th>
-                        <th style="border-bottom:1px solid #888;">Material / Method</th>
-                        <th style="border-bottom:1px solid #888;">Why</th>
-                        <th style="border-bottom:1px solid #888;">Status&nbsp;(May 2025)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr><td>Airframe (4″ Ø)</td><td>G12 filament‑wound fiberglass tube</td><td>Radio‑transparent baseline</td><td>Received</td></tr>
-                    <tr><td>Nose cone</td><td>3:1 ogive fiberglass + CNC Al tip</td><td>Strength / weight balance</td><td>CDR closed</td></tr>
-                    <tr><td>Fins &amp; bulkheads</td><td>Water‑jet‑cut G10 laminates</td><td>High modulus, low CAM‑time</td><td>Ready to machine</td></tr>
-                    <tr><td>Centering rings</td><td>PET‑G 3‑D printed (60 % infill)</td><td>Rapid iteration</td><td>Printed / QA</td></tr>
-                    <tr><td>Bond‑line</td><td>West System 105/206 epoxy</td><td>Aerospace pedigree</td><td>In stock</td></tr>
-                </tbody>
-            </table>
-            </div>
-
-            <h3 style="color:#ffffff;">3&nbsp;| Analysis &amp; Verification</h3>
-            <ul style="color:#ffffff;">
-                <li><strong>Flight modelling</strong> – OpenRocket &amp; RASAero II predict apogee 10,120 ft AGL @ Mach 0.67
-                    with 1.5 cal stability margin.</li>
-                <li><strong>FEA</strong> – ANSYS Static Structural on orthotropic lay‑ups shows ≥ 2.5 × limit‑load safety factor.</li>
-                <li><strong>Coupon tests</strong> – 8‑ply G12/Epoxy tensile &amp; shear coupons validate lamina inputs (±8 %).</li>
-                <li><strong>Fin‑can rig</strong> – Custom screw‑jack fixture: 200 lbf compression / 150 lbf bending, 0.8 mm tip deflection.</li>
-            </ul>
-
-            <img src="../images/rocket_cad.png" alt="Rocket CAD model" style="display:block;margin:2rem auto;max-width:640px;width:90%;">
-
-            <h3 style="color:#ffffff;">4&nbsp;| Manufacturing Pipeline</h3>
-            <ol style="color:#ffffff;">
-                <li>CAD release → automatic DXF / STEP export via SolidWorks PDM.</li>
-                <li>Custom <em>ply‑book generator</em> (Python) outputs cut files &amp; cure schedules.</li>
-                <li>Wet lay‑up + vacuum bag for prototypes; migrating to prepreg out‑of‑autoclave cure in next cycle.</li>
-                <li>Bond‑line QA with dye penetrant and digital calipers (≤ 0.15 mm gap spec).</li>
-            </ol>
-
-            <img src="../images/struct_workflow.png" alt="Structural workflow diagram" style="display:block;margin:2rem auto;max-width:640px;width:90%;">
-
-            <h3 style="color:#ffffff;">5&nbsp;| Integration &amp; Testing Milestones</h3>
-            <ul style="color:#ffffff;">
-                <li>Structural Critical Design Review – Jan 2025 (92 / 100&nbsp;ESRA score).</li>
-                <li>Fin‑can proof test – Apr 2025 (2 × aerodynamic design‑load).</li>
-                <li>Full‑stack fit‑check – May 2025.</li>
-                <li>Static fire &amp; Flight Readiness Review – June 2025.</li>
-            </ul>
-
-            <h3 style="color:#ffffff;">6&nbsp;| Impact &amp; Lessons Learned</h3>
-            <p style="color:#ffffff;">
-                The composite‑analysis toolbox I built slashed laminate sizing time by 60 %, while our design‑for‑manufacture checklist is now used across propulsion and avionics.  
-                Most importantly, running design reviews as “teaching sprints” boosted team‑wide analytical intuition — raising quality faster than any solo effort.
-            </p>
-
-            <hr style="border:0;border-top:1px solid #666;margin:3rem 0;">
-
-            <p style="color:#ffffff;text-align:center;font-weight:bold;">
-                TL;DR – Led structures on a 10 k ft hybrid rocket, validated 2.5 × SF composites, mentored 12 engineers, and will put the vehicle on the pad at IREC 2025.
-            </p>
-        </div>
-    </section>
-</body>
-</html>
--->
