--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -32,13 +32,13 @@
         <br>
         
         <!-- OVERVIEW -->
-        <p style="color: #ffffff;">As founding <strong>Structures Lead</strong>, I own the end‑to‑end structural development of a
+        <p style="color: #ffffff;">As the <strong>Structures Lead</strong>, I own the end‑to‑end structural development of a
             <strong>10k ft Commercial‑Off‑The‑Shelf hybrid rocket</strong> headed to the International Rocket
             Engineering Competition (<abbr title="International Rocket Engineering Competition">IREC</abbr>) in June 2025.
             Since team formation in November 2024 we have delivered a flight‑ready prototype, secured sponsorships,
             and sourced manufacturing partners &nbsp;— all on track for our first launch campaign.
         </p>
-
+        <br>
         <!-- ROLE & SCOPE -->
         <h3 style="color:#ffffff;">| My Role &amp; Scope</h3>
         <ul style="color:#ffffff; font-size:1.3rem;">
@@ -68,7 +68,7 @@
                 <tr><td>Nose cone</td><td>3:1 ogive fiberglass + CNC Al-tip</td><td>Optimized σ/weight & k/weight</td><td>Madcow Rocketry</td></tr>
                 <tr><td>Bulkheads</td><td>G10 laminate</td><td>High modulus</td><td>CNC Water-jet machining</td></tr>
                 <tr><td>Fins</td><td>Birch Plywood</td><td>Easy Manufacturing</td><td>CNC Laser Cutting</td></tr>
-                <tr><td>Centering rings</td><td>PET‑G 3‑D printed (100% infill)</td><td>Rapid iteration</td><td>3D Printed</td></tr>
+                <tr><td>Centering rings</td><td>PETG 3‑D printed (100% infill)</td><td>Rapid iteration</td><td>3D Printed</td></tr>
                 <tr><td>Bonding</td><td>West System 105/206 epoxy</td><td>Aerospace pedigree</td><td>West Systems</td></tr>
             </tbody>
         </table>
@@ -95,8 +95,9 @@
 
         <img src="../images/rocket_cad.png" alt="Rocket CAD model" style="display: block; margin: 0 auto;">
         <br>
-        <h3 style="color:#ffffff;">| Design & Analysis Pipeline</h3>
         <br>
+
+        <h3 style="color:#ffffff;">| Design & Analysis Pipeline</h3>
         <img src="../images/struct_workflow.png" alt="Structural workflow diagram" style="display: block; margin: 0 auto;">
         <br>
         <br>
@@ -107,8 +108,10 @@
             <li>Full‑stack fit‑check – May 2025.</li>
             <li>Static fire &amp; Flight Readiness Review – June 2025.</li>
         </ul>
+
         <br>
         <br>
+
         <h3 style="color:#ffffff;">| Impact &amp; Lessons Learned</h3>
         <p style="color:#ffffff;">
             The composite‑analysis toolbox I built slashed laminate sizing time by 60 %, while our design‑for‑manufacture checklist is now used across propulsion and avionics.  
@@ -116,6 +119,7 @@
         </p>
         <br>
         <br>
+
         <hr style="border:0;border-top:1px solid #666;margin:3rem 0;">
 
         <p style="color:#ffffff;text-align:center;font-weight:bold;">
