--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -80,11 +80,9 @@
         <!-- analysis -->
         <h3 style="color:#ffffff;">| Analysis &amp; Verification</h3>
         <ul style="color:#ffffff;">
-            <li><strong>Flight modelling</strong> – OpenRocket &amp; RASAero II predict apogee 10,120 ft AGL @ Mach 0.98
-                with 1.5 cal stability margin.</li>
+            <li><strong>Flight modelling</strong> – OpenRocket &amp; RASAero II predict apogee 12,172 ft AGL @ Mach 0.924
+                with 5.53 cal stability margin.</li>
             <li><strong>FEA</strong> – ANSYS Static Structural on orthotropic lay‑ups shows ≥ 2.5 × limit‑load safety factor.</li>
-            <li><strong>Coupon tests</strong> – 8‑ply G12/Epoxy tensile &amp; shear coupons validate lamina inputs (±8 %).</li>
-            <li><strong>Fin‑can rig</strong> – Custom screw‑jack fixture: 200 lbf compression / 150 lbf bending, 0.8 mm tip deflection.</li>
         </ul>
         <br>
         <br>
@@ -103,9 +101,10 @@
         <br>
         <h3 style="color:#ffffff;">| Integration &amp; Testing Milestones</h3>
         <ul style="color:#ffffff;">
-            <li>Structural Critical Design Review – Jan 2025 (92 / 100&nbsp;ESRA score).</li>
-            <li>Fin‑can proof test – Apr 2025 (2 × aerodynamic design‑load).</li>
-            <li>Full‑stack fit‑check – May 2025.</li>
+            <li><strong>ASTM-D695-91</strong> – Compression Testing not possible due to our body tube’s 4” diameter barely exceeding testing apparatus capability. In addition, there is not enough material to test for buckling failure criteria with the recommended 10:1 length-to-diameter ratio.
+            </li>
+            <li><strong>ASTM-D3039-95</strong> - Two flat samples were tested with mutually perpendicular orientations to obtain axial & circumferntial strength values</li>
+            <li> <strong>ASTM-D2290</strong> - Out-of-plane tensile hoop strength properties for body tubes</li>
             <li>Static fire &amp; Flight Readiness Review – June 2025.</li>
         </ul>
 
@@ -114,7 +113,7 @@
 
         <h3 style="color:#ffffff;">| Impact &amp; Lessons Learned</h3>
         <p style="color:#ffffff;">
-            The composite‑analysis toolbox I built slashed laminate sizing time by 60 %, while our design‑for‑manufacture checklist is now used across propulsion and avionics.  
+            This experience was an excellent experience in regards to managing a team, composites, and setting the foundation for an efficient workflow that enabled our structures team to accelerate progress in the future.  
             Most importantly, running design reviews as “teaching sprints” boosted team‑wide analytical intuition — raising quality faster than any solo effort.
         </p>
         <br>
