--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -113,7 +113,7 @@
 
         <h3 style="color:#ffffff;">| Impact &amp; Lessons Learned</h3>
         <p style="color:#ffffff;">
-            This experience was an excellent experience in regards to managing a team, composites, and setting the foundation for an efficient workflow that enabled our structures team to accelerate progress in the future.  
+            This was an excellent experience in regards to managing a team, composites, and setting the foundation for an efficient workflow that enabled our structures team to accelerate progress in the future.  
             Most importantly, running design reviews as “teaching sprints” boosted team‑wide analytical intuition — raising quality faster than any solo effort.
         </p>
         <br>
