--- a/projects/sae.html
+++ b/projects/sae.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAE Aero Projects | Alvaro Guerra</title>
+    <title>IGNITORS Projects | Alvaro Guerra</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -22,10 +22,127 @@
         </nav>
     </header>
 
+    <!-- ─────────── MAIN CONTENT ─────────── -->
     <section>
-        <h1 style="color: #ffffff; text-align: center;">SAE Aero Design Competition</h1>
-        <h2>My Work</h2>
-        <p>...</p>
+        <!-- TITLE BLOCK -->
+        <div class = "centered-content">
+        <h1 style="color: #ffffff; text-align: center;">SAE Aero Design</h1>
+        <h3 style="color: #ffffff; text-align: center;">Texas A&amp;M University</h3>
+        <br>
+        
+        <!-- OVERVIEW -->
+        <p style="color: #ffffff;">As a Structures and Material Science Designer for the 2022-23 SAE Aero Regular class season, there were many design challenges that I got to work on.  
+            The plane design for the 2022 season is particularly impressive because the
+              18-foot wingspan and large fuselage capacity allowed the plane to carry weight capable of reaching the FAA limit of 55 pounds and made this plane
+               the biggest in Texas A&M history.  In addition, our team had to make sure all design decisions followed the
+               <a href="../files/SAE_AeroDesign_2023_Rules.pdf" download>annually updated ruleset.</a>
+        </p>
+        <br>
+        <br>
+        <img src ="../images/XXXXXX" alt="pres" style="display: block; margin: 0 auto; width:75%; height:auto;">
+        <br>
+        <br>
+
+        <!-- SP1 -->
+        <!-- XP1 -->
+         <!-- CP1-->
+        <!-- Payload Design -->
+        <!-- payload stress simulation files visualization-->
+
+        <!-- Jig Stands -->
+        <!-- Misc. Designs-->
+
+        <!-- Manufacturing WB1 & WB2-->
+
+        <!-- Flight Test Videos-->
+
+        <!-- CP1 Final CAD -->
+        <!-- CP1 Component Weight-->
+
+        <!--Competition Photos & Videos-->
+
+
+
+
+
+
+
+
+
+
+        <!-- SYSTEM ARCHITECTURE TABLE -->
+        <h3 style="color:#ffffff;">| System Architecture</h3>
+        <div style="overflow-x:auto;">
+        <table style="width:100%;border-collapse:collapse;color:#ffffff;text-align:left; font-size:1.3rem;">
+            <thead>
+                <tr>
+                    <th style="border-bottom:1px solid #888;">Sub‑system</th>
+                    <th style="border-bottom:1px solid #888;">Material / Method</th>
+                    <th style="border-bottom:1px solid #888;">Why</th>
+                    <th style="border-bottom:1px solid #888;">Source</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>Airframe (4″ Ø)</td><td>G12 filament‑wound fiberglass tube</td><td>Radio‑transparency</td><td>Wildman Rocketry</td></tr>
+                <tr><td>Nose cone</td><td>3:1 ogive fiberglass + CNC Al-tip</td><td>Optimized σ/weight & k/weight</td><td>Madcow Rocketry</td></tr>
+                <tr><td>Bulkheads</td><td>G10 laminate</td><td>High modulus</td><td>CNC Water-jet machining</td></tr>
+                <tr><td>Fins</td><td>Birch Plywood</td><td>Easy Manufacturing</td><td>CNC Laser Cutting</td></tr>
+                <tr><td>Centering rings</td><td>PETG 3‑D printed (100% infill)</td><td>Rapid iteration</td><td>3D Printed</td></tr>
+                <tr><td>Bonding</td><td>West System 105/206 epoxy</td><td>Aerospace pedigree</td><td>West Systems</td></tr>
+            </tbody>
+        </table>
+        </div>
+        <br>      
+        <img src="../images/ork_rocket.png" alt="ORK" style="display: block; margin: 0 auto;">
+        <br>
+        <br>
+        <!-- analysis -->
+        <h3 style="color:#ffffff;">| Analysis &amp; Verification</h3>
+        <ul style="color:#ffffff;">
+            <li><strong>Flight modelling</strong> – OpenRocket &amp; RASAero II predict apogee 12,172 ft AGL @ Mach 0.924
+                with 5.53 cal stability margin.</li>
+            <li><strong>FEA</strong> – ANSYS Static Structural on orthotropic lay‑ups shows ≥ 2.5 × limit‑load safety factor.</li>
+        </ul>
+        <br>
+        <br>
+
+
+        <img src="../images/rocket_cad.png" alt="Rocket CAD model" style="display: block; margin: 0 auto;">
+        <br>
+        <br>
+
+        <h3 style="color:#ffffff;">| Design & Analysis Pipeline</h3>
+        <img src="../images/struct_workflow.png" alt="Structural workflow diagram" style="display: block; margin: 0 auto;">
+        <br>
+        <br>
+        <h3 style="color:#ffffff;">| Integration &amp; Testing Milestones</h3>
+        <ul style="color:#ffffff;">
+            <li><strong>ASTM-D695-91</strong> – Compression Testing not possible due to our body tube’s 4” diameter barely exceeding testing apparatus capability. In addition, there is not enough material to test for buckling failure criteria with the recommended 10:1 length-to-diameter ratio.
+            </li>
+            <li><strong>ASTM-D3039-95</strong> - Two flat samples were tested with mutually perpendicular orientations to obtain axial & circumferntial strength values</li>
+            <li> <strong>ASTM-D2290</strong> - Out-of-plane tensile hoop strength properties for body tubes</li>
+            <li>Static fire &amp; Flight Readiness Review – June 2025.</li>
+        </ul>
+
+        <br>
+        <br>
+
+        <h3 style="color:#ffffff;">| Impact &amp; Lessons Learned</h3>
+        <p style="color:#ffffff;">
+            This was an excellent experience in regards to managing a team, composites, and setting the foundation for an efficient workflow that enabled our structures team to accelerate progress in the future.  
+            Most importantly, running design reviews as “teaching sprints” boosted team‑wide analytical intuition — raising quality faster than any solo effort.
+        </p>
+        <br>
+        <br>
+
+        <hr style="border:0;border-top:1px solid #666;margin:3rem 0;">
+
+        <p style="color:#ffffff;text-align:center;font-weight:bold;">
+            TL;DR – Led structures on a 10k ft hybrid rocket, validated 2.5 × SF composites, mentored 12 engineers, and will put the vehicle on the pad at IREC 2025.
+        </p>
+
+        <hr style="border:0;border-top:1px solid #757575;margin:3rem 0;">
+        </div>
     </section>
 </body>
 </html>
