--- a/projects/sae.html
+++ b/projects/sae.html
@@ -20,16 +20,16 @@
             <a href="../files/Resume.pdf">Resume</a> |
             <a href="../index.html">Projects</a>
         </nav>
+        <div class="header-text">
+            <h1 class="header-name">SAE Aero Design</h1>
+            <div class="header-line"></div>
+            <h1 class="header-title">Society of Automotive Engineering - Texas A&M University</h1>
+        </div>
     </header>
 
     <!-- ─────────── MAIN CONTENT ─────────── -->
     <section>
-        <!-- TITLE BLOCK -->
-        <div class = "centered-content">
-        <h1 style="color: #ffffff; text-align: center;">SAE Aero Design</h1>
-        <h3 style="color: #ffffff; text-align: center;">Texas A&amp;M University</h3>
-        <br>
-        
+     
         <!-- OVERVIEW -->
         <p style="color: #ffffff;">As a Structures and Material Science Designer for the 2022-23 SAE Aero Regular class season, there were many design challenges that I got to work on.  
             The plane design for the 2022 season is particularly impressive because the
