--- a/projects/sae.html
+++ b/projects/sae.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <header>
+    <header class="sae-header">
         <a href="../index.html" class="logo-link">
             <div class="logo-name">
                 <img src="../images/logo.png" alt="Logo" class="logo">
@@ -26,6 +26,7 @@
             <h1 class="header-title">Society of Automotive Engineering - Texas A&M University</h1>
         </div>
     </header>
+
 
     <!-- ─────────── MAIN CONTENT ─────────── -->
     <section>
