--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="project-card">
             <img src="images/bitcoinprice.png" alt="MLbitcoin">
             <h2>ML Methods for Engineering Data Analysis</h2>
-            <p>I took TAMU's MEEN 423 machine learning class in the spring of 2025.  I completed two projects for the class that utilized macine learning techniques to analyze complex datasets.  One was evaluating stess-strain relationships and one in financial time-series analysis.   </p>
+            <p>I took TAMU's MEEN 423 machine learning class in the spring of 2025.  I completed two projects for the class that utilized machine learning techniques to analyze complex datasets.  One was evaluating stess-strain relationships and one in financial time-series analysis.   </p>
             <a href="projects/meen423.html">Read More</a>
             <a href="https://github.com/Agu303/MEEN423_AG" target="_blank">Github Repo</a>
         </div>
