--- a/projects/sae.html
+++ b/projects/sae.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IGNITORS Projects | Alvaro Guerra</title>
+    <title>SAE Projects | Alvaro Guerra</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -30,8 +30,8 @@
 
     <!-- ─────────── MAIN CONTENT ─────────── -->
     <section>
-     
         <!-- OVERVIEW -->
+        <div class = "centered-content">
         <p style="color: #ffffff;">As a Structures and Material Science Designer for the 2022-23 SAE Aero Regular class season, there were many design challenges that I got to work on.  
             The plane design for the 2022 season is particularly impressive because the
               18-foot wingspan and large fuselage capacity allowed the plane to carry weight capable of reaching the FAA limit of 55 pounds and made this plane
@@ -65,7 +65,7 @@
 
 
 
-
+        </div>
     </section>
 </body>
 </html>
