--- a/projects/sae.html
+++ b/projects/sae.html
@@ -36,14 +36,14 @@
             The plane design for the 2022 season is particularly impressive because the
               18-foot wingspan and large fuselage capacity allowed the plane to carry weight capable of reaching the FAA limit of 55 pounds and made this plane
                the biggest in Texas A&M history.  In addition, our team had to make sure all design decisions followed the
-               <a href="../files/SAE_AeroDesign_2023_Rules.pdf">annually updated ruleset.</a>
+               <a href="../files/SAE_AeroDesign_2023_Rules.pdf" style="color: white;">annually updated ruleset.</a>
         </p>
 
         <br>
         <br>
 
         <!-- *********SP1********* -->
-        <h2 style="color:#ffffff;">| Summer Plane 1 <i>(SP1)</i></h2>
+        <h2 style="color:#ffffff;">| Summer Plane 1---<i>SP1</i></h2>
         <p style="color: #ffffff;"> Since the annual ruleset had not been released yet for the 2023 season, our team decided to work the entirety of the summer 
             brainstorming new designs based on previous years' ideas and begin CAD development for airplane structures.  This period marked my first stage within my team's development and served as 
             a major introduction for aeronautical design.  
@@ -52,7 +52,7 @@
         <!-- fuseplate -->
         <br>
         <br>
-        <h2 style="color:#ffffff;">Fuseplate <i>(SP1)</i></h2>
+        <h2 style="color:#ffffff;">Fuseplate <i>SP1</i></h2>
         <p style="color: #ffffff;"> The very first simple project I worked on were the fuseplates that would be utilized as a load-bearing intermediary between the fuselage and bottom of the plane's wingplate.
             It was important that the geometry of the fuseplate matched the contact area of the wingplate edges and that they distribute stress evenly.
               The fuseplate pretty much acts like a very large wooden sandwich washer.  As shown in the images, the exterior layers of the sandwich structure was comprised of existing cedar wood laying around the shop and polyeurethane as the core.
@@ -71,7 +71,7 @@
         <!-- ribs + imported airfoil-->
         <br>
         <br>
-        <h2 style="color:#ffffff;">Ribs <i>(SP1)</i></h2>
+        <h2 style="color:#ffffff;">Ribs <i>SP1</i></h2>
         <p style="color: #ffffff;"> Another project I worked on in the summer was designing the wing ribs for our summer plane that involved a forward-swept wing design. The airfoil profile coordinates were obtained from the NACA database and exported as a .csv file containing coordinates of the airfoil profile.  The tabular data was then imported into the SolidWorks Curve function. This established the overall contour of the wing and ensured the desired aerodynamic characteristics. Unfortunately, I do not recall the specific NACA 'XXXX' variant! The ribs were spaced evenly along the span of the wing for uniform pressure load distribution during flight. The root chord was scaled up from the original NACA coordinates then lofted to a tip plane. This design laid the foundation for creating future iterations of lightweight and structurally sound wings. 
         </p>
         <br>
