--- a/projects/sae.html
+++ b/projects/sae.html
@@ -43,7 +43,7 @@
         <br>
 
         <!-- *********SP1********* -->
-        <h2 style="color:#ffffff;">| Summer Plane 1---<i>SP1</i></h2>
+        <h2 style="color:#ffffff;">| Summer Plane 1 - <i>SP1</i></h2>
         <p style="color: #ffffff;"> Since the annual ruleset had not been released yet for the 2023 season, our team decided to work the entirety of the summer 
             brainstorming new designs based on previous years' ideas and begin CAD development for airplane structures.  This period marked my first stage within my team's development and served as 
             a major introduction for aeronautical design.  
@@ -82,17 +82,49 @@
 
 
         <!-- XP1 -->
-            
+        <h2 style="color:#ffffff;">| Experimental Plane 1---<i>XP1</i></h2>
+        <p style="color: #ffffff;"> After the ruleset was released, our team began work on our experimental plane design that would be used for flight testing.  The
+             '23 season had unique design requirments which include prohibition of fiber-reinforced plastics, rubber bands, and stability assistance.  Payload requirements required a regular boxed cargo, which must be carried 
+             internally to the aircraft.  The cargo had to consist of a support assembly and payload plates that do not utilize tape or velcro.  The payload also had to be unloaded within 1 minute after a successful flight.
+        </p>
+        <!-- Payload Design -->
+        <br>
+        <br>
+        <h2 style="color:#ffffff;">Payload Design <i>XP1</i></h2>
+        <p style="color: #ffffff;"> The payload design for the '23 season is particularly impressive because the 18-foot wingspan and large fuselage capacity allowed the plane to carry weight capable of reaching the FAA limit of 55 pounds!
+            My role for this project entailed selecting a geometric steel plate shape, designing the connection method to the wing plate, selecting the plate pattern, running surrounding truss FEA and topological optimization, and manufacturing the payload.
+
+        </p>
+        <p>
+            The design process for the payload started with a preliminary analysis of the aircraft's required center of gravity, payload capacity, and log booking of viable payload materials in the shop.  The plane's empty (plane without payload components) 'CG' location was found to be 20.45 inches aft from the main wing leading edge.  The desired plane's CG, with payload, was determined to be 9.5 inches aft from the main wing leading edge. The plane's 'empty weight' was estimated to be 23.1 pounds meaning a max payload weight of 31.9 pounds.  
+            The constraints of this project posed a significant challenge as the materials and processes involved were difficult to get right. The material type had to be dense enough to meet the maximum payload capacity of 31.9 pounds, fit within wing plate dimensions, and be possible for a person to load/unload payload components in under 1 minute.  In addition, to save time and money for the team I had to create a design that required the least amount of manufacturing processing and utilized metal materials that we already had in our shop.  
+        </p>
+        <br>
+        <br>
+        <img src ="../images/payload_cg.png" alt="pres" style="display: block; margin: 0 auto; width:75%; height:auto;">
+        <br>
+        <p style="color: #ffffff;"> CAD of steel payload assembly adjusted for proper CG </p>
+        <br>
+        <p>
+            After the payload design was finalized, I began collecting empirical measurements for all the metal inventory in our shop that could be utilized as viable payload components.  The metal had to be dense enough so that the CG would shift to the desired location, take up the least amount of space yet be light enough so that we could load the aircraft efficiently.  After much analysis, I decided that we would discard the aluminum metal and utilize the steel material we had.
+            The steel payload was prefabricated and the wingplate was created with dense basswood to ensure structural integrity and was laser cut from Solidworks dxf file designs.  This project helped me develop my FEA, topological optimization, and CAD experience. It was exciting to be given the responsibility of designing such an important feature of the aircraft and finding the best combination of payload inventory to meet the required design objectives. 
+        </p>
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <img src ="../images/steel_plate.png" alt="pres" style="display: block; margin: 0 auto; width:75%; height:auto;">
+            <img src="../images/payload_plane.png" alt="pres" style="width: 45%; height: auto;">
+        </div>
+
+        <!-- payload stress simulation files visualization-->
+
+         <!-- Flight Test Videos-->    
 
         <!-- CP1-->
-        <!-- Payload Design -->
-        <!-- payload stress simulation files visualization-->
         <!-- Jig Stands -->
         <!-- Misc. Designs-->
         <!-- Manufacturing WB1 & WB2-->
-        <!-- Flight Test Videos-->
         <!-- CP1 Final CAD -->
         <!-- CP1 Component Weight-->
+    
         <!--Competition Photos & Videos-->
 
         </div>
